# candle

./: .gitattributes  .gitignore  Makefile  README.md  go.mod
.github/workflows/: ci.yml  release.yml
candle_binding/: Cargo.toml
candle_binding/src/: classification.rs  clip.rs  depth.rs  embeddings.rs  image_utils.rs  lib.rs  segmentation.rs  t5.rs  text_generation.rs  translation.rs  video.rs  whisper.rs
examples/embeddings/: main.go
examples/translation/: main.go
pkg/candle/: candle.go  candle.h  candle_test.go  classification.go  clip.go  depth.go  download.go  embeddings.go  loader.go  segmentation.go  t5.go  test_helpers_test.go  text_generation.go  translation.go  video.go  whisper.go
scripts/: build-binding.sh  compress-libs.sh
